--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,205 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body{
+  background-color: #DCF2F1;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  height: 100vh;
+  width: 100vw;
   display: flex;
   flex-direction: column;
+  justify-content: space-around;
   align-items: center;
+}
+
+.image-slider {
+  height: 30vh;
+  width: 100%;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+}
+.view-image {
+  height: 65vh;
+  width: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.image-view {
+  height: 65vh;
+  width: 60%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.16),
+    0px 0px 0px 3px rgba(51, 51, 51, 1);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.image-view img {
+  height:100%;
+  width: 100%;
 }
+
+.image-slider-container {
+  height: 80%;
+  width: 40%;
+  border: 1px solid grey;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.icon {
+  height: 100%;
+  width: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: lightgrey;
+  border-radius: 10px;
+}
+.frontbackimg {
+  height: 120px;
+  width: 60%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
+  opacity: 0.8;
+}
+
+.main-img {
+  height: 120px;
+  width: 120%;
+  border-radius: 10px;
+}
+
+.main-view {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+ 
+
+@media (max-width:800px){
+  .view-image {
+    height: 60vh;
+    width: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .image-view {
+    height: 60vh;
+    width: 80%;
+  }
+  
+
+.image-view img {
+  height:100%;
+  width: 100%;
+}
+.image-slider-container {
+  height: 80%;
+  width: 80%;
+}
+}
+
+@media (max-width:600px){
+
+  .view-image {
+    height: 50vh;
+    width: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .image-view {
+    height: 50vh;
+    width: 80%;
+  }
+  .image-slider-container {
+    height: 80%;
+    width: 90%;
+  }
+  
+}
+
+@media (max-width:450px){
+  .view-image {
+    height: 40vh;
+    width: 90%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .image-view {
+    height: 40vh;
+    width: 90%;
+  }
+  .image-slider-container {
+    height: 80%;
+    width: 90%;
+  }
+  
+}
+
+
+@media (max-width:380px){
+    .view-image {
+      height: 37vh;
+      width: 85%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    .image-view {
+      height: 37vh;
+      width: 85%;
+    }
+    .image-slider-container {
+      height: 60%;
+      width: 92%;
+    }
+    .frontbackimg {
+      width: 70%;
+      height: 80%;
+    }
+    
+  }
+
+  @media (max-width:280px){
+    
+    .App {
+      height: 100vh;
+      width: 100vw;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-evenly;
+      align-items: center;
+    }
+  
+    .view-image {
+      height: 37vh;
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    .image-view {
+      height: 37vh;
+      width: 95%;
+    }
+    
+  }
